--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -9,5 +9,32 @@
 </head>
 <body>
   <%- include("./partial/navbar.ejs") %> 
+    <div class="container">
+      <table class="table">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">No</th>
+            <th scope="col">Name</th>
+            <th scope="col">Category</th>
+            <th scope="col">Price</th>
+            <th scope="col">Stock</th>
+            <th scope="col">ImageUrl</th>
+          </tr>
+        </thead>
+        <tbody class="tbody-light">
+          <%data.forEach((e,i) => {%>
+            <tr>
+              <td><%= i %> </td>
+              <td><a href="/product/<%= e.id %> "><%= e.name %> </a></td>
+              <td><%= e.Category.name %> </td>
+              <td><%= e.price %> </td>
+              <td><%= e.stock %> </td>
+              <td><a href="<%= e.imageUrl %> "><%= e.imageUrl %> </a></td>
+            </tr>
+         <% });%>
+        </tbody>
+      </table>
+    </div>
+  
 </body>
 </html>
