sampai di fitur add

--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -10,6 +10,9 @@
 <body>
   <%- include("./partial/navbar.ejs") %> 
     <div class="container">
+      <div>
+        <a class="btn btn-dark" href="/product/add">Add New Product</a>
+      </div>
       <table class="table">
         <thead class="thead-dark">
           <tr>
