--- a/views/productDetailPage.ejs
+++ b/views/productDetailPage.ejs
@@ -20,7 +20,7 @@
       <h6><%= productById.Category.name %></h6>
     </div>
     <div>
-      <h3><%= productById.price %></h3>
+      <h3><%= formatRupiah(productById.price) %></h3>
     </div>
     <div>
       <h5><%= productById.description %></h5>   
