--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -11,7 +11,18 @@
   <%- include("./partial/navbar.ejs") %> 
     <div class="container">
       <div>
-        <a class="btn btn-dark" href="/product/add">Add New Product</a>
+        <a class="btn btn-dark" href="/product/add">Add New Product</a> <br>
+        <form style="width: 500px; margin: 2px 3px; float: left;" action="/" method="get">
+          <select name="category" class="form-select mb-3">
+            <option selected disabled>--Choose--</option>
+            <% ["Kursi","Lemari","Kasur","Meja","Kloset"].forEach(el=> { %>
+            <option value="<%=el%>">
+              <%= el%>
+            </option>
+            <% }) %>
+          </select>
+          <input type="submit" class="btn btn-danger" value="Filter">
+        </form>
       </div>
       <table class="table">
         <thead class="thead-dark">
