--- a/views/productDetailPage.ejs
+++ b/views/productDetailPage.ejs
@@ -5,6 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script>
+    function showAlert() {
+      var myText = "Item berhasil masuk keranjang";
+      alert (myText);
+    }
+    </script>
   <title>Detail Product</title>
 </head>
 <body>
@@ -29,7 +35,10 @@
       <h6>Stock Barang : <%= productById.stock %></h6>
     </div>
     <div>
-      <a class="btn btn-success" href="">Add To Cart</a>
+      <form action="/cart" method="post">
+        <input id="test" type="hidden" name="ProductId" value="<%= productById.id %>">
+        <button class="btn btn-primary" type="submit" onclick="showAlert()">Add To Cart</button>
+      </form>
       <a class="btn btn-warning" href="/product/<%= productById.id %>/edit">Edit</a>
       <a class="btn btn-danger" href="/product/<%= productById.id %>/delete">Delete</a>
     </div>
