--- a/views/productAddPage.ejs
+++ b/views/productAddPage.ejs
@@ -10,6 +10,9 @@
 <body>
   <%- include("./partial/navbar.ejs") %> 
   <div class="container">
+    <div style="color: red">
+      <%= errors %> 
+    </div>
     <div>
       <h1>Add New Product</h1>
     </div>
