--- a/views/productEditPage.ejs
+++ b/views/productEditPage.ejs
@@ -13,6 +13,9 @@
     <div>
       <h1>Edit Product</h1>
     </div>
+    <div style="color: red">
+      <%= errors %> 
+    </div>
     <div>
       <form action="" method="post">
         <label for="name">Product Name :</label><br>
