--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -11,7 +11,9 @@
   <%- include("./partial/navbar.ejs") %> 
     <div class="container">
       <div>
-        <a class="btn btn-dark" href="/product/add">Add New Product</a> <br>
+        <% if(req.session.role === 'Admin') { %>
+          <a class="btn btn-dark" href="/product/add">Add New Product</a> <br>
+          <% } %>
         <form style="width: 500px; margin: 2px 3px; float: left;" action="/" method="get">
           <select name="category" class="form-select mb-3">
             <option selected disabled>--Choose--</option>
