--- a/views/registerPage.ejs
+++ b/views/registerPage.ejs
@@ -11,16 +11,14 @@
   <a href="#">Home</a>
   <a href="/login"> < Back</a> 
   <hr>
+  <div style="color: red">
+    <%= errors %> 
+  </div>
 <form action="/register" method="post">
   <label >email:</label><br>
   <input type="text"  name="email" ><br><br>
   <label >name:</label><br>
   <input type="text"  name="name" ><br><br>
-  <label >roles:</label><br>
-  <select name="roles" id="roles">
-    <option value="User">User</option>
-    <option value="Admin">Admin</option>
-  </select><br><br>
   <label >Date of Birth:</label><br>
   <input type="date"  name="dateOfBirth" ><br><br>
   <label >password:</label><br>
